[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/FontSize24.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/PointBreakdownRow.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/uipack_fixed/Vector/UIpack_vector.svg" type="Texture" id=3]
[ext_resource path="res://UI/MeetingRecapDisplay.gd" type="Script" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 624, 312, 200, 56 )
margin_left = 13.6103
margin_right = 14.0494
margin_top = 14.4884
margin_bottom = 10.098
modulate_color = Color( 0.52549, 0.541176, 0.584314, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="Animation" id=3]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MeetingRecapDisplay" type="PanelContainer"]
margin_right = 279.66
margin_bottom = 160.586
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 13.6103
margin_top = 14.4884
margin_right = 265.611
margin_bottom = 150.488
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 247.0
margin_bottom = 130.0
custom_constants/separation = 10

[node name="RecapTitle" type="Label" parent="MarginContainer/Rows"]
margin_right = 242.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "MEETING RECAP"
align = 1

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/Rows"]
margin_top = 32.0
margin_right = 242.0
margin_bottom = 36.0
custom_styles/separator = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BreakdownRows" type="VBoxContainer" parent="MarginContainer/Rows"]
margin_top = 46.0
margin_right = 242.0
margin_bottom = 61.0

[node name="PointBreakdownRow" parent="MarginContainer/Rows/BreakdownRows" instance=ExtResource( 2 )]

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Rows"]
margin_top = 71.0
margin_right = 242.0
margin_bottom = 75.0
custom_styles/separator = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalPointsRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 85.0
margin_right = 242.0
margin_bottom = 107.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalPointsLabel" type="Label" parent="MarginContainer/Rows/TotalPointsRow"]
margin_right = 182.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "TOTAL POINTS:"

[node name="TotalPointsValue" type="Label" parent="MarginContainer/Rows/TotalPointsRow"]
margin_left = 186.0
margin_right = 242.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "2398"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 3 )
anims/show = SubResource( 4 )

[node name="RecapDisplayTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="RecapDisplayTimer" to="." method="_on_RecapDisplayTimer_timeout"]
